packages/apps/spaces/components/ui-kit/atoms/table/table-cells/table-cells.module.scss
.header {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: start;
  font-weight: normal;
  // todo change barlow to barlow

  &.labelWithAvatar {
    margin-left: calc(
      30px + 1rem
    ); // todo change after adding other column avatar length + margin
  }
}

.label {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.addressContainer {
  font-size: var(--font-size-sm);
  display: flex;
  flex-direction: column;
  align-items: baseline;

  &:not(:last-of-type) {
    border-bottom: 1px solid var(--gray-300);
    padding-bottom: 8px;
    margin-bottom: 8px;
  }
}

.addressFields {
  display: flex;
}

.addressLocality {
  color: var(--gray-800);
}

.addressRegion {
  color: var(--gray-700);
  font-size: 0.9rem;
}

.cell {
  display: flex;
  align-items: center;
  flex-direction: column;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-break: keep-all;
  overflow: hidden;
}

.columnCell {
  flex-direction: column;
  align-items: initial;
}

.linkCell {
  text-decoration: none;
  flex-direction: row;
  padding: var(--spacing-sm) var(--spacing-xs);
  margin: calc(-1 * var(--spacing-sm)) calc(-1 * var(--spacing-xs)); // increase clickable area
}

.textContent {
  margin-left: var(--spacing-sm);
}
.cellData {
  display: flex;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-break: keep-all;
  overflow: hidden;
  color: var(--table-label-color);
}

.subLabel {
  color: var(--table-sublabel-color);
  font-size: var(--font-size-sm);
}

.link {
  color: var(--royal-blue-600);

  &:hover,
  &:focus,
  &:active {
    text-decoration: underline;
  }
}

